Add a public multi-threaded job system
- Add thread class methods to get and set properties of specified threads
- Add thread and signal fences to the atomic class
- Add an apptest for the multi-threaded job system
- Add a compiler option to support GCC and Clang thread sanitizer

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -48,7 +48,7 @@ else()
 			list(APPEND APPTESTS apptest_lua apptest_luareload)
 		endif()
 		if(NCINE_WITH_IMGUI)
-			list(APPEND APPTESTS apptest_anchor apptest_filebrowser apptest_loading apptest_viewports apptest_scaling)
+			list(APPEND APPTESTS apptest_anchor apptest_filebrowser apptest_loading apptest_viewports apptest_scaling apptest_jobsystem)
 			if(NCINE_WITH_ALLOCATORS)
 				list(APPEND APPTESTS apptest_allocators)
 			endif()
